--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,39 @@
 
 body {
   color: var(--color-body);
+  font-size: 1.4rem;
 }
 
 h1,
 h2,
 h3 {
   color: var(--color-heading);
+  font-weight: 700;
 }
 
 /* asinging color */
+
+/* typography */
+html {
+  font-size: 62.5%;
+}
+h1 {
+  font-size: 2.5rem;
+}
+h2 {
+  font-size: 2.2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.8rem;
+  }
+  h1 {
+    font-size: 5rem;
+  }
+  h2 {
+    font-size: 3.5rem;
+  }
+}
+
+/* typography */
