--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  list-style: none;
+  /* list-style: none; */
   text-decoration: none;
 }
 /* css reset */
@@ -127,3 +127,37 @@ h2 {
   }
 }
 /* badge */
+
+/* list */
+
+.list {
+  list-style: none;
+  font-size: 1.6rem;
+}
+.list--inline .list__item {
+  display: inline-block;
+  margin-left: 2rem;
+}
+
+/* .list--tick .list__item::before {
+  content: " ";
+  width: 35px;
+  height: 35px;
+  background: url(../assets/images/Tick-Square.svg) no-repeat;
+
+  padding: 3rem;
+} */
+.list--tick .list__item {
+  background: url(../assets/images/Tick-Square.svg) no-repeat right center;
+  padding: 3rem;
+  margin-bottom: 1.5rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .list--tick .list__item {
+    margin-bottom: 2rem;
+    font-size: 1.8rem;
+  }
+}
+
+/* list */
